# SeqAnRef

./: .gitignore  CMakeLists.txt  README.md
Algorithms/DP_Alignment/Multiple_Sequence_Alignment/: main.cpp
Algorithms/DP_Alignment/Pairwise_Sequence_Alignment/Banded_Alignment/: main.cpp
Algorithms/DP_Alignment/Pairwise_Sequence_Alignment/Global_Alignment/: main.cpp
Algorithms/DP_Alignment/Pairwise_Sequence_Alignment/Local_Alignment/: main.cpp
Algorithms/DP_Alignment/Pairwise_Sequence_Alignment/Overlap_Alignment/: main.cpp
Algorithms/DP_Alignment/Pairwise_Sequence_Alignment/Specialized_Alignment/: main.cpp
Algorithms/Pattern_Matching/Indexed_Pattern_Matching/: main.cpp
Algorithms/Pattern_Matching/Online_Pattern_Matching/: main.cpp
Algorithms/Pattern_Matching/Optimal_Search_Scheme/: main.cpp
Algorithms/Seed_Extension/Banded_Chain_Alignment/: main.cpp
Algorithms/Seed_Extension/Basic_Extending/: main.cpp
Algorithms/Seed_Extension/Gapped_X-Drop_Extending/: main.cpp
Algorithms/Seed_Extension/Global_Chaining/: main.cpp
Algorithms/Seed_Extension/Local_Chaining/: main.cpp
Alignment/: main.cpp
Data_Structures/Alignment/GraphAlignment/: main.cpp
Data_Structures/CommonQGramMatrix/: main.cpp
Data_Structures/Graphs/HMM/: main.cpp
Data_Structures/IndexIterators/: main.cpp
Data_Structures/JournaledStringTree/: main.cpp
Data_Structures/Modifiers/: main.cpp
Data_Structures/strings_segments/: main.cpp
JournaledStringTree/: main.cpp
Store/GenomeAnnotations/: main.cpp
arg_parser/: main.cpp
first_example/: main.cpp
